# aura-plugin

./: .gitignore  CMakeLists.txt  LICENSE.txt  README_INSTALL.txt  TODOs
.github/workflows/: build-macos.yml
Installer/: AuraSetup.iss  aura.json  build_macos.sh
Installer/Windows/: build_and_package.ps1
Installer/macOS/: build_and_package.sh  build_installer.sh  uninstall.sh
Source/: PluginEditor.cpp  PluginEditor.h  PluginEditor.h.backup  PluginProcessor.cpp  PluginProcessor.h  pch.h
Source/DSP/: ABComparison.h  AdvancedFilterDesigns.h  AdvancedProcessing.cpp  AdvancedProcessing.h  AutoGainCompensation.h  BiquadFilter.cpp  BiquadFilter.h  DynamicResonanceSuppressor.h  EQBand.cpp  EQBand.h  EQProcessor.cpp  EQProcessor.h  FFTAnalyzer.cpp  FFTAnalyzer.h  HighQualityOversampler.h  InstrumentProfiles.h  LinearPhaseEQ.h  LiveSmartEQ.h  PsychoAcousticModel.h  ReferenceAudioPlayer.h  SVFFilter.h  SmartAnalyzer.cpp  SmartAnalyzer.h  SmartEQRecommendation.h  SpectralAnalysis.h  SpectralMatcher.h
Source/GUI/: AudioSourceSelector.h  BandControls.cpp  BandControls.h  BandPopup.cpp  BandPopup.h  CustomLookAndFeel.cpp  CustomLookAndFeel.h  EQCurveComponent.cpp  EQCurveComponent.h  KeyboardShortcutManager.h  LevelMeter.cpp  LevelMeter.h  LicenseDialog.cpp  LicenseDialog.h  LiveSmartEQPanel.h  PianoRollOverlay.h  PresetComponent.h  ReferenceTrackPanel.h  SmartHighlightOverlay.h  SmartRecommendationPanel.h  SpectrumAnalyzer.cpp  SpectrumAnalyzer.cpp.backup  SpectrumAnalyzer.h  SpectrumGrabTool.cpp  SpectrumGrabTool.h  ThemeManager.h  ThemeSelector.h  UpdateNotification.h
Source/Licensing/: LicenseDialog.h  LicenseManager.cpp  LicenseManager.h  OnlineLicenseValidator.h  license_generator.py  verify_keys.py
Source/Parameters/: ParameterIDs.h  ParameterLayout.cpp  ParameterLayout.h
Source/Presets/: PresetManager.h
Source/Utils/: UndoRedoManager.cpp  UndoRedoManager.h  UpdateChecker.h  VersionInfo.h  VirtualAudioDeviceDetector.h  WASAPILoopbackCapture.h
